--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
@@ -15,9 +16,24 @@
   </style>
 </head>
 <body>
-  Features
-  Team
-  Sign In
+
+  <div class="container">
+    <header class="header">
+      <div class="header__logo-container">
+        <svg class="header__logo">
+          <use xlink:href="images/logo.svg#logo"></use>
+        </svg>
+      </div>
+
+      <nav class="nav">
+        <ul class="nav__list">
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 
   All your files in one secure location, accessible anywhere.
 
