Add Logo and nav

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
   
@@ -19,11 +22,7 @@
 
   <div class="container">
     <header class="header">
-      <div class="header__logo-container">
-        <svg class="header__logo">
-          <use xlink:href="images/logo.svg#logo"></use>
-        </svg>
-      </div>
+      <img src="images/logo.svg" alt="Logo" class="header__logo">
 
       <nav class="nav">
         <ul class="nav__list">
