Add hero section

--- a/index.html
+++ b/index.html
@@ -34,12 +34,21 @@
     </header>
   </div>
 
-  All your files in one secure location, accessible anywhere.
-
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
-
-  Get Started
+  <div class="container">
+    <div class="hero">
+        <img src="/images/illustration-intro.png" alt="People having fun" class="hero__image">
+        <h1 class="hero__title">
+          All your files in one secure location, accessible anywhere.
+        </h1>
+        <p class="hero__description">
+          Fylo stores all your most important files in one secure location. Access them wherever 
+          you need, share and collaborate with friends family, and co-workers.
+        </p>
+        <button class="hero__cta">
+          Get Started
+        </button>
+      </div>
+  </div>
 
   Access your files, anywhere
 
