--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
@@ -19,89 +16,46 @@
   </style>
 </head>
 <body>
+  Features
+  Team
+  Sign In
 
-  <div class="container">
-    <header class="header">
-      <img src="images/logo.svg" alt="Logo" class="header__logo">
+  All your files in one secure location, accessible anywhere.
 
-      <nav class="nav">
-        <ul class="nav__list">
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Sign In</a></li>
-        </ul>
-      </nav>
-    </header>
-  </div>
+  Fylo stores all your most important files in one secure location. Access them wherever 
+  you need, share and collaborate with friends family, and co-workers.
 
-  <div class="container--gradient">
-    <div class="container--test">
-      <div class="hero">
-        <img src="/images/illustration-intro.png" alt="People having fun" class="hero__image">
-        <h1 class="hero__title">
-          All your files in one secure location, accessible anywhere.
-        </h1>
-        <p class="hero__description">
-          Fylo stores all your most important files in one secure location. Access them wherever 
-          you need, share and collaborate with friends family, and co-workers.
-        </p>
-        <button class="hero__cta">
-          Get Started
-        </button>
-      </div>
-    </div>
-  </div>
+  Get Started
 
-  <div class="container--dark">
-    <div class="features">
-      <div class="features__element">
-          <img src="/images/icon-access-anywhere.svg" alt="" class="features__img">
-          <h2 class="features__title">Access your files, anywhere</h2>
-          <p class="features__description">
-            The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.
-            </p>
-      </div>
-      <div class="features__element">
-          <img src="/images/icon-security.svg" alt="" class="features__img">
-          <h2 class="features__title">Security you can trust</h2>
-          <p class="features__description">
-            2-factor authentication and user-controlled encryption are just a couple of the security features we allow to help secure your files.
-          </p>
-      </div>
-      <div class="features__element">
-          <img src="/images/icon-collaboration.svg" alt="" class="features__img">
-          <h2 class="features__title">Real-time collaboration</h2>
-          <p class="features__description">
-            Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.
-          </p>
-      </div>
-      <div class="features__element">
-          <img src="/images/icon-any-file.svg" alt="" class="features__img">
-          <h2 class="features__title">Store any type of file</h2>
-          <p class="features__description">Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types to be securely stored and shared.
-          </p>
-      </div>
-    </div>
-  </div>
+  Access your files, anywhere
 
-  <div class="container--dark">
-    <div class="demo">
-      <img src="/images/illustration-stay-productive.png" alt="" class="demo__image">
-      <h2 class="demo__title">
-        Stay productive, wherever you are
-      </h2>
-      <p class="demo__paragraph">
-        Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-        storage needs.
-      </p>
-      <p class="demo__paragraph">
-        Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.
-      </p>
-      <a href="#" class="demo__cta">
-        See how Fylo works
-      </a>
-    </div>
-  </div>
+  The ability to use a smartphone, tablet, or computer to access your account means your 
+  files follow you everywhere.
+
+  Security you can trust
+
+  2-factor authentication and user-controlled encryption are just a couple of the security 
+  features we allow to help secure your files.
+
+  Real-time collaboration
+
+  Securely share files and folders with friends, family and colleagues for live collaboration. 
+  No email attachments required.
+
+  Store any type of file
+
+  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+  file types to be securely stored and shared.
+
+  Stay productive, wherever you are
+
+  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
+  storage needs.
+
+  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
+  attachments required.
+
+  See how Fylo works
 
   Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
   become a well-oiled collaboration machine.
@@ -146,7 +100,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Juan Pujol</a>.
+      Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
 </body>
