Add html BEM layout

--- a/index.html
+++ b/index.html
@@ -16,92 +16,218 @@
   </style>
 </head>
 <body>
-  Features
-  Team
-  Sign In
+  <div class="wrap">
+    <nav class="nav">
+      <div class="nav__logo">
+        <svg>
+          <use xlink:href="images/logo.svg#logo" />
+        </svg>
+      </div>
+      <ul class="nav__items">
+        <li class="nav__item">Features</li>
+        <li class="nav__item">Team</li>
+        <li class="nav__item">Sign In</li>
+      </ul>
+    </nav>
 
-  All your files in one secure location, accessible anywhere.
+    <div class="hero">
+      <div class="hero__title">
+        All your files in one secure location, accessible anywhere.
+      </div>
+      <div class="hero__desc">
+        Fylo stores all your most important files in one secure location. Access them wherever
+        you need, share and collaborate with friends family, and co-workers.
+      </div>
+      <button class="hero__action">
+        Get Started
+      </button>
+    </div>
 
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
+    <div class="features">
+      <div class="features__list">
+        <div class="features__item">
+          <div class="features__image">
+            <svg>
+              <use xlink:href="" />
+            </svg>
+          </div>
+          <div class="features__title">
+            Access your files, anywhere
+          </div>
+          <div class="features__desc">
+            The ability to use a smartphone, tablet, or computer to access your account means your
+            files follow you everywhere.
+          </div>
+        </div>
+        <div class="features__item">
+          <div class="features__image">
+            <svg>
+              <use xlink:href="" />
+            </svg>
+          </div>
+          <div class="features__title">
+            Security you can trust
+          </div>
+          <div class="features__desc">
+            2-factor authentication and user-controlled encryption are just a couple of the security
+            features we allow to help secure your files.
+          </div>
+        </div>
+        <div class="features__item">
+          <div class="features__image">
+            <svg>
+              <use xlink:href="" />
+            </svg>
+          </div>
+          <div class="features__title">
+            Real-time collaboration
+          </div>
+          <div class="features__desc">
+            Securely share files and folders with friends, family and colleagues for live collaboration.
+            No email attachments required.
+          </div>
+        </div>
+        <div class="features__item">
+          <div class="features__image">
+            <svg>
+              <use xlink:href="" />
+            </svg>
+          </div>
+          <div class="features__title">
+            Store any type of file
+          </div>
+          <div class="features__desc">
+            Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
+            file types to be securely stored and shared.
+          </div>
+        </div>
+      </div>
+    </div>
 
-  Get Started
+    <div class="usp">
+      <div class="usp__image">
+        <svg class="features__image">
+          <use xlink:href="" />
+        </svg>
+      </div>
+      <div class="usp__content">
+        <div class="usp__title">
+          Stay productive, wherever you are
+        </div>
+        <div class="usp__desc">
+          <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+            storage needs.</p>
+          <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
+            attachments required.</p>
+        </div>
+        <div class="usp__cta">
+          See how Fylo works
+        </div>
+      </div>
+    </div>
 
-  Access your files, anywhere
+    <div class="testimonials">
+      <div class="testimonials__list">
+        <div class="testimonials__item">
+          <div class="testimonials__text">
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.
+          </div>
+          <div class="testimonial__author">
+            <div class="testimonial__author-image">
 
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
+            </div>
+            <div class="testimonial__author-name">
+              Satish Patel
+            </div>
+            <div class="testimonial__author-status">
+              Founder & CEO, Huddle
+            </div>
+          </div>
+        </div>
+        <div class="testimonials__item">
+          <div class="testimonials__text">
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.
+          </div>
+          <div class="testimonial__author">
+            <div class="testimonial__author-image">
 
-  Security you can trust
+            </div>
+            <div class="testimonial__author-name">
+              Bruce McKenzie
+            </div>
+            <div class="testimonial__author-status">
+              Founder & CEO, Huddle
+            </div>
+          </div>
+        </div>
+        <div class="testimonials__item">
+          <div class="testimonials__text">
+            Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.
+          </div>
+          <div class="testimonial__author">
+            <div class="testimonial__author-image">
 
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
+            </div>
+            <div class="testimonial__author-name">
+              Iva Boyd
+            </div>
+            <div class="testimonial__author-status">
+              Founder & CEO, Huddle
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  Real-time collaboration
+    <div class="registration">
+      <div class="registration__box">
+        <div class="registration__title">
+          Get early access today
+        </div>
+        <div class="registration__desc">
+          It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+          questions, our support team would be happy to help you.
+        </div>
+        <div class="registration__input">
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
+        </div>
+        <button class="registration__button">
+          Get Started For Free
+        </button>
+      </div>
+    </div>
 
-  Store any type of file
+    <footer class="footer">
+      <div class="footer__logo"></div>
+      <div class="footer__location">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua
+      </div>
+      <div class="footer__number">
+        +1-543-123-4567
+      </div>
+      <div class="footer__email">
+        example@fylo.com
+      </div>
+      <ul class="footer__pages">
+        <li>About Us</li>
+        <li>Jobs</li>
+        <li>Press</li>
+        <li>Blog</li>
+      </ul>
+      <ul class="footer__misc">
+        <li>Contact Us</li>
+        <li>Terms</li>
+        <li>Privacy</li>
+      </ul>
+      <div class="footer__social">
 
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
+      </div>
+    </footer>
 
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  </div>
 </body>
 </html>
