Complete mobile hero section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="nav__item nav__item--first">Features</div>
       <div class="nav__item">Team</div>
-      <div class="nav__item nav__item--last">Sign In</div>
+      <div class="nav__item">Sign In</div>
     </nav>
 
     <div class="hero">
