--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <div class="hero__image">
         <img src="/images/illustration-intro.png" alt="">
       </div>
-      <div class="hero__title">
+      <h1 class="hero__title">
         All your files in one secure location, accessible anywhere.
-      </div>
+      </h1>
       <div class="hero__desc">
         Fylo stores all your most important files in one secure location. Access them wherever
         you need, share and collaborate with friends family, and co-workers.
@@ -45,13 +45,11 @@
       <div class="features__list">
         <div class="features__item">
           <div class="features__image">
-            <svg>
-              <use xlink:href="" />
-            </svg>
+            <img src="/images/icon-access-anywhere.svg" alt="">
           </div>
-          <div class="features__title">
+          <h2 class="features__title">
             Access your files, anywhere
-          </div>
+          </h2>
           <div class="features__desc">
             The ability to use a smartphone, tablet, or computer to access your account means your
             files follow you everywhere.
@@ -59,13 +57,11 @@
         </div>
         <div class="features__item">
           <div class="features__image">
-            <svg>
-              <use xlink:href="" />
-            </svg>
+              <img src="/images/icon-security.svg" alt="">
           </div>
-          <div class="features__title">
+          <h2 class="features__title">
             Security you can trust
-          </div>
+          </h2>
           <div class="features__desc">
             2-factor authentication and user-controlled encryption are just a couple of the security
             features we allow to help secure your files.
@@ -73,13 +69,11 @@
         </div>
         <div class="features__item">
           <div class="features__image">
-            <svg>
-              <use xlink:href="" />
-            </svg>
+              <img src="/images/icon-collaboration.svg" alt="">
           </div>
-          <div class="features__title">
+          <h2 class="features__title">
             Real-time collaboration
-          </div>
+          </h2>
           <div class="features__desc">
             Securely share files and folders with friends, family and colleagues for live collaboration.
             No email attachments required.
@@ -87,13 +81,11 @@
         </div>
         <div class="features__item">
           <div class="features__image">
-            <svg>
-              <use xlink:href="" />
-            </svg>
+              <img src="/images/icon-any-file.svg" alt="">
           </div>
-          <div class="features__title">
+          <h2 class="features__title">
             Store any type of file
-          </div>
+          </h2>
           <div class="features__desc">
             Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
             file types to be securely stored and shared.
