--- a/index.html
+++ b/index.html
@@ -96,14 +96,12 @@
 
     <div class="usp">
       <div class="usp__image">
-        <svg class="features__image">
-          <use xlink:href="" />
-        </svg>
+        <img src="./images/illustration-stay-productive.png" alt="">
       </div>
       <div class="usp__content">
-        <div class="usp__title">
+        <h2 class="usp__title">
           Stay productive, wherever you are
-        </div>
+        </h2>
         <div class="usp__desc">
           <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file
             storage needs.</p>
@@ -112,6 +110,7 @@
         </div>
         <div class="usp__cta">
           See how Fylo works
+          <img src="../images/icon-arrow.svg" alt="">
         </div>
       </div>
     </div>
