Add testimonials page

--- a/index.html
+++ b/index.html
@@ -117,20 +117,22 @@
 
     <div class="testimonials">
       <div class="testimonials__list">
-        <div class="testimonials__item">
+        <div class="testimonials__item testimonials__item--first">
           <div class="testimonials__text">
             Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
             become a well-oiled collaboration machine.
           </div>
-          <div class="testimonial__author">
-            <div class="testimonial__author-image">
-
+          <div class="testimonials__author">
+            <div class="testimonials__author-image">
+              <img src="./images/profile-1.jpg" alt="">
             </div>
-            <div class="testimonial__author-name">
-              Satish Patel
-            </div>
-            <div class="testimonial__author-status">
-              Founder & CEO, Huddle
+            <div class="testimonials__author-meta">
+              <div class="testimonials__author-name">
+                Satish Patel
+              </div>
+              <div class="testimonials__author-status">
+                Founder & CEO, Huddle
+              </div>
             </div>
           </div>
         </div>
@@ -139,15 +141,17 @@
             Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
             become a well-oiled collaboration machine.
           </div>
-          <div class="testimonial__author">
-            <div class="testimonial__author-image">
-
+          <div class="testimonials__author">
+            <div class="testimonials__author-image">
+              <img src="./images/profile-2.jpg" alt="">
             </div>
-            <div class="testimonial__author-name">
-              Bruce McKenzie
-            </div>
-            <div class="testimonial__author-status">
-              Founder & CEO, Huddle
+            <div class="testimonials__author-meta">
+              <div class="testimonials__author-name">
+                Bruce McKenzie
+              </div>
+              <div class="testimonials__author-status">
+                Founder & CEO, Huddle
+              </div>
             </div>
           </div>
         </div>
@@ -156,15 +160,17 @@
             Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
             become a well-oiled collaboration machine.
           </div>
-          <div class="testimonial__author">
-            <div class="testimonial__author-image">
-
+          <div class="testimonials__author">
+            <div class="testimonials__author-image">
+              <img src="./images/profile-3.jpg" alt="">
             </div>
-            <div class="testimonial__author-name">
-              Iva Boyd
-            </div>
-            <div class="testimonial__author-status">
-              Founder & CEO, Huddle
+            <div class="testimonials__author-meta">
+              <div class="testimonials__author-name">
+                Iva Boyd
+              </div>
+              <div class="testimonials__author-status">
+                Founder & CEO, Huddle
+              </div>
             </div>
           </div>
         </div>
