--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         Fylo stores all your most important files in one secure location. Access them wherever
         you need, share and collaborate with friends family, and co-workers.
       </div>
-      <button class="hero__action">
+      <button class="hero__action action-button">
         Get Started
       </button>
     </div>
@@ -179,17 +179,17 @@
 
     <div class="registration">
       <div class="registration__box">
-        <div class="registration__title">
+        <h2 class="registration__title">
           Get early access today
-        </div>
+        </h2>
         <div class="registration__desc">
           It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
           questions, our support team would be happy to help you.
         </div>
         <div class="registration__input">
-
+          <input type="text" placeholder="email@example.com">
         </div>
-        <button class="registration__button">
+        <button class="registration__button action-button">
           Get Started For Free
         </button>
       </div>
