--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 </head>
 <body>
-  <div class="wrap">
     <nav class="nav">
       <div class="nav__logo">
         <img src="./images/logo.svg" alt="">
@@ -196,7 +195,9 @@
     </div>
 
     <footer class="footer">
-      <div class="footer__logo"></div>
+      <div class="footer__logo">
+        <img src="/images/logo.svg" alt="">
+      </div>
       <div class="footer__location">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
         dolore magna aliqua
@@ -219,10 +220,17 @@
         <li>Privacy</li>
       </ul>
       <div class="footer__social">
-
+        <div class="footer__social-logo">
+            <img src="/images/logo-facebook.svg" alt="">
+        </div>
+        <div class="footer__social-logo">
+            <img src="/images/logo-twitter.svg" alt="">
+        </div>
+        <div class="footer__social-logo">
+            <img src="/images/logo-instagram.svg" alt="">
+        </div>
       </div>
     </footer>
 
-  </div>
 </body>
 </html>
