--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="hero">
       <div class="hero__image">
-        <img src="/images/illustration-intro.png" alt="">
+        <img src="./images/illustration-intro.png" alt="">
       </div>
       <h1 class="hero__title">
         All your files in one secure location, accessible anywhere.
@@ -44,7 +44,7 @@
       <div class="features__list">
         <div class="features__item">
           <div class="features__image">
-            <img src="/images/icon-access-anywhere.svg" alt="">
+            <img src="./images/icon-access-anywhere.svg" alt="">
           </div>
           <h2 class="features__title">
             Access your files, anywhere
@@ -56,7 +56,7 @@
         </div>
         <div class="features__item">
           <div class="features__image">
-              <img src="/images/icon-security.svg" alt="">
+              <img src="./images/icon-security.svg" alt="">
           </div>
           <h2 class="features__title">
             Security you can trust
@@ -68,7 +68,7 @@
         </div>
         <div class="features__item">
           <div class="features__image">
-              <img src="/images/icon-collaboration.svg" alt="">
+              <img src="./images/icon-collaboration.svg" alt="">
           </div>
           <h2 class="features__title">
             Real-time collaboration
@@ -80,7 +80,7 @@
         </div>
         <div class="features__item">
           <div class="features__image">
-              <img src="/images/icon-any-file.svg" alt="">
+              <img src="./images/icon-any-file.svg" alt="">
           </div>
           <h2 class="features__title">
             Store any type of file
@@ -109,7 +109,7 @@
         </div>
         <div class="usp__cta">
           See how Fylo works
-          <img src="../images/icon-arrow.svg" alt="">
+          <img src="./images/icon-arrow.svg" alt="">
         </div>
       </div>
     </div>
@@ -196,7 +196,7 @@
 
     <footer class="footer">
       <div class="footer__logo">
-        <img src="/images/logo.svg" alt="">
+        <img src="./images/logo.svg" alt="">
       </div>
       <div class="footer__location">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -221,13 +221,13 @@
       </ul>
       <div class="footer__social">
         <div class="footer__social-logo">
-            <img src="/images/logo-facebook.svg" alt="">
+            <img src="./images/logo-facebook.svg" alt="">
         </div>
         <div class="footer__social-logo">
-            <img src="/images/logo-twitter.svg" alt="">
+            <img src="./images/logo-twitter.svg" alt="">
         </div>
         <div class="footer__social-logo">
-            <img src="/images/logo-instagram.svg" alt="">
+            <img src="./images/logo-instagram.svg" alt="">
         </div>
       </div>
     </footer>
