Add more media queries

--- a/index.html
+++ b/index.html
@@ -198,39 +198,42 @@
       <div class="footer__logo">
         <img src="./images/logo.svg" alt="">
       </div>
-      <div class="footer__location">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua
-      </div>
-      <div class="footer__number">
-        +1-543-123-4567
-      </div>
-      <div class="footer__email">
-        example@fylo.com
-      </div>
-      <ul class="footer__pages">
-        <li>About Us</li>
-        <li>Jobs</li>
-        <li>Press</li>
-        <li>Blog</li>
-      </ul>
-      <ul class="footer__misc">
-        <li>Contact Us</li>
-        <li>Terms</li>
-        <li>Privacy</li>
-      </ul>
-      <div class="footer__social">
-        <div class="footer__social-logo">
-            <img src="./images/logo-facebook.svg" alt="">
+      <div class="footer__content">
+        <div class="footer__location">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua
         </div>
-        <div class="footer__social-logo">
-            <img src="./images/logo-twitter.svg" alt="">
+        <div class="footer__contact">
+          <div class="footer__number">
+            +1-543-123-4567
+          </div>
+          <div class="footer__email">
+            example@fylo.com
+          </div>
         </div>
-        <div class="footer__social-logo">
-            <img src="./images/logo-instagram.svg" alt="">
+        <ul class="footer__pages">
+          <li>About Us</li>
+          <li>Jobs</li>
+          <li>Press</li>
+          <li>Blog</li>
+        </ul>
+        <ul class="footer__misc">
+          <li>Contact Us</li>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+        <div class="footer__social">
+          <div class="footer__social-logo">
+              <img src="./images/logo-facebook.svg" alt="">
+          </div>
+          <div class="footer__social-logo">
+              <img src="./images/logo-twitter.svg" alt="">
+          </div>
+          <div class="footer__social-logo">
+              <img src="./images/logo-instagram.svg" alt="">
+          </div>
         </div>
       </div>
     </footer>
-
 </body>
 </html>
